tests/specs/graph/fast_check/issue_jsr_580.txt
# https://jsr.io/@scope/a/meta.json
{"versions": { "1.0.0": {} } }

# https://jsr.io/@scope/a/1.0.0_meta.json
{ "exports": { ".": "./mod.ts" } }

# https://jsr.io/@scope/a/1.0.0/mod.ts
const enabled = DEBUG.split(/[\s,]+/);

export interface DebugFn {
  (...args: unknown[]): void;
  enabled: boolean;
}

export const createDebug = (namespace: string): DebugFn => {
  const debug = (...args: unknown[]) => {
    if (debug.enabled) log(namespace, format(...args));
  };

  // for some reason, tracing was following this enabled identifier
  // to the one above
  debug.enabled = enabled.some((s) => true);

  return debug;
};

# mod.ts
import 'jsr:@scope/a'

# output
{
  "roots": [
    "file:///mod.ts"
  ],
  "modules": [
    {
      "kind": "esm",
      "dependencies": [
        {
          "specifier": "jsr:@scope/a",
          "code": {
            "specifier": "jsr:@scope/a",
            "span": {
              "start": {
                "line": 0,
                "character": 7
              },
              "end": {
                "line": 0,
                "character": 21
              }
            }
          }
        }
      ],
      "size": 22,
      "mediaType": "TypeScript",
      "specifier": "file:///mod.ts"
    },
    {
      "kind": "esm",
      "size": 440,
      "mediaType": "TypeScript",
      "specifier": "https://jsr.io/@scope/a/1.0.0/mod.ts"
    }
  ],
  "redirects": {
    "jsr:@scope/a": "https://jsr.io/@scope/a/1.0.0/mod.ts"
  },
  "packages": {
    "@scope/a": "@scope/a@1.0.0"
  }
}

Fast check https://jsr.io/@scope/a/1.0.0/mod.ts:
  error[missing-explicit-type]: missing explicit type in the public API
   --> https://jsr.io/@scope/a/1.0.0/mod.ts:1:7
    |
  1 | const enabled = DEBUG.split(/[\s,]+/);
    |       ^^^^^^^ this symbol is missing an explicit type
    = hint: add an explicit type annotation to the symbol

    info: all symbols in the public API must have an explicit type
    docs: https://jsr.io/go/slow-type-missing-explicit-type

